# django-jbank

./: .coverage  .deploy.swp  .gitignore  .pre-commit-config.yaml  .pre-release.swp  .requirements.txt.swp  LICENSE.txt  MANIFEST.in  README.md  deploy  linecalc.conf  manage.py  msg  mypy.ini  pre-release  prospector.yml  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  setup.py  test-coverage  test.xml
data/: ecb-rates-2019-08-15.xml  entry-types.json  rate-sources-2023-05-22.json  rates-2023-05-22.json  x509-cert.pem  x509-data.xml  x509-key.pem
data/finvoice/: xsd-test.xml
data/pain001/: upload-response.json
data/pki/: CreateCertificate-res.xml  GetBankCertificate-res.xml
data/svm/: 547392460.SVM
data/to/: 547404896.TO
data/ws-edi/: BankCorporateFileService.wsdl
data/x509/: appreq.xml  x509data.xml
data/xm/: camt_054_credit_notoification_example_finland.py  camt_054_credit_notoification_example_finland.xml
data/xp/: 547958656.XP
data/xt/: 772864574.XT
jbank/: __init__.py  admin.py  aeb43.py  apps.py  camt.py  csr_helpers.py  ecb.py  euribor.py  files.py  helpers.py  models.py  pain002.py  parsers.py  sepa.py  services.py  svm.py  tests.py  tito.py  wsedi.py  wspki.py  x509_helpers.py
jbank/migrations/: 0001_initial.py  0001_squashed_0071_wsediconnection_ca_cert_file.py  0002_auto_20171031_0356.py  0002_auto_20200817_2217.py  0003_auto_20200902_1354.py  0003_statement_account.py  0004_refund_attachment.py  0004_statementfile.py  0005_auto_20201203_2308.py  0005_statementfile_created.py  0006_auto_20171102_2341.py  0006_auto_20210318_2130.py  0007_auto_20171102_2351.py  0007_auto_20210507_2122.py  0008_auto_20171103_0007.py  0008_auto_20210512_2208.py  0009_auto_20171107_1847.py  0009_referencepaymentbatchfile_cached_total_amount.py  0010_auto_20171226_1013.py  0010_statementrecorddetail_creditor_account_scheme.py  0011_auto_20180126_0851.py  0011_referencepaymentbatch_cached_total_amount.py  0012_alter_referencepaymentrecord_delivery_method.py  0012_auto_20180126_0858.py  0013_auto_20180126_0909.py  0013_euriborrate.py  (+88 more)
project/: settings.py  urls.py  wsgi.py
(+73 files in other folders)
